# mastercard-match

./: .gitignore  CHANGELOG.md  LICENSE  PYTHON3_CONVERSION.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_python3_compatibility.py  verify_installation.py  verify_python3.py
mastercard_match.egg-info/: PKG-INFO
mastercardmatch/: acquirercontactrequest.py  addterminatedmerchant.py  resourceconfig.py  retroactiveinquirydetailsrequest.py  retroactiveinquiryrequest.py  terminationinquiryhistoryrequest.py  terminationinquiryrequest.py
