[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mastercard_match"
version = "1.0.8"
description = "MasterCard API Python SDK"
readme = "README.md"
license = {text = "BSD"}
authors = [
    {name = "MasterCard Worldwide", email = "APISupport@mastercard.com"}
]
maintainers = [
    {name = "MasterCard Worldwide", email = "APISupport@mastercard.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8"
dependencies = [
    "mastercard-api-client>=2.0.3"
]

[project.urls]
Homepage = "https://www.developer.mastercard.com"
Repository = "https://github.com/kenbolton/mastercard-match.git"

[project.optional-dependencies]
test = ["mock"]

[tool.setuptools.packages.find]
exclude = ["contrib*", "docs*", "tests*"]
