[metadata]
name = mastercard_match
version = 1.0.6
description = MasterCard API Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.developer.mastercard.com
author = MasterCard Worldwide
author_email = APISupport@mastercard.com
license = BSD
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
install_requires =
    mastercard_api_core>=1.4.0,<1.5.0

[options.packages.find]
exclude =
    contrib*
    docs*
    tests*

[options.extras_require]
test =
    mock

[egg_info]
tag_build = 
tag_date = 0