[metadata]
name = mastercard_match
version = 1.0.8
description = MasterCard API Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.developer.mastercard.com
author = MasterCard Worldwide
author_email = APISupport@mastercard.com
license = BSD
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8
install_requires =
    mastercard-api-client>=2.0.3

[options.packages.find]
exclude =
    contrib*
    docs*
    tests*

[options.extras_require]
test =
    mock

[egg_info]
tag_build = 
tag_date = 0